<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="openParenth">(</string>
    <string name="closedParenth">)</string>
    <string name="backspace">DEL</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="slash">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiplier">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subtract">-</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>

</resources>
